snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.jar.sha1
4433d58855b89cece90833f002542c2b3fe17ff6